--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.90'
+generated_by: 'Module::Install version 0.95'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,16 +18,12 @@ no_index:
   directory:
     - inc
     - t
-provides:
-  DBIx::Class::ResultSet::WithMetaData:
-    file: lib/DBIx/Class/ResultSet/WithMetaData.pm
-    version: 0.999002
 requires:
-  DBIx::Class: 0.08
+  DBIx::Class: 0.081
   DBIx::Class::ResultClass::HashRefInflator: 0
   Data::Alias: 0
-  MooseX::Method::Signatures: 0.16
+  Method::Signatures::Simple: 0.05
   perl: 5.6.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.999002
+version: 0.999003
