--- a/META.yml
+++ b/META.yml
@@ -18,6 +18,10 @@ no_index:
   directory:
     - inc
     - t
+provides:
+  DBIx::Class::ResultSet::WithMetaData:
+    file: lib/DBIx/Class/ResultSet/WithMetaData.pm
+    version: 1.000000
 requires:
   DBIx::Class: 0.081
   DBIx::Class::ResultClass::HashRefInflator: 0
@@ -26,4 +30,4 @@ requires:
   perl: 5.6.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.999003
+version: 1.000000
